# cpi-2024

./: .gitignore  Dockerfile  README.md  pyproject.toml
blockcpi/: __main__.py  api.py  game.py  map.py
blokcpi/: api.py  game.py  map.py
